# Semesterarbeit

./: .gitignore  CMakeLists.txt  DTDTag.cpp  DTDTag.h  DataObject.cpp  DataObject.h  Parser.cpp  Parser.h  README.md  XMLDraft.pro  XMLTag.cpp  XMLTag.h  daten.xml  daten2.txt  datenDTD.dtd  main.cpp
